# SEBI

./: .env.example  .gitignore  CLAUDE.md  DEMO_RUNBOOK.md  README.md  conftest.py  pyrightconfig.json
backend/: pyproject.toml
backend/app/: config.py  coverage.py  eligibility.py  facts.py  main.py  persistence.py
backend/app/assemble/: bundle.py  docx_builder.py
backend/app/generate/: sections.py
backend/app/intake/: litigation.py  question_copy.yaml  uploads.py  wizard.py
backend/app/llm/: client.py
backend/app/review/: workflow.py
backend/app/schema/: applicability.py  loader.py  models.py
backend/app/schema/checklists/: icdr_ch9_v2026-03.yaml
backend/app/validate/: arithmetic.py  boilerplate.py  contradictions.py  examiner.py  gaps.py
backend/scripts/: seed_demo.py
data/demo_company/: README.md  litigation_records.json  wizard_answers.json
data/reference_drhps/: README.md  harit_industries_drhp_2026-03-19.sections.yaml  harit_industries_drhp_2026-03-19.txt  qualiance_drhp_2026-03-30.sections.yaml  qualiance_drhp_2026-03-30.txt  smartdata_drhp_2026-03-31.sections.yaml  smartdata_drhp_2026-03-31.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx
tests/: test_api.py  test_applicability.py  test_arithmetic.py  test_assembly.py  test_benchmark.py  test_boilerplate.py  test_bundle.py  test_contradictions.py  test_coverage.py  test_examiner.py  test_facts.py  test_generate.py  test_litigation.py  test_llm_client.py  test_persistence.py  test_schema_loader.py  test_uploads.py  test_wizard.py
(+13 files in other folders)
